# tinynn

./: .gitignore  LICENSE  README.md  __init__.py  basic_operations_graph.dot  engine.py  example.py  main.py  mypy.ini  neural_network_graph.dot  nn.py  optim.py  pyproject.toml  train.py  viz.py
.github/workflows/: python-checks.yml
micrograd/: __init__.py  nn.py  optim.py  viz.py
output/: basic_operations_graph.dot  neural_network_graph.dot
tinynn/: __init__.py  engine.py  nn.py  optim.py  trainer.py  viz.py  viz_nn.py
