[project]
name = "tinynn"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "pydot>=3.0.4",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.9.10",
]
